--- a/notebooks/01_00_tensorflow_test.ipynb
+++ b/notebooks/01_00_tensorflow_test.ipynb
@@ -42,7 +42,7 @@
     "    !mkdir -p ~/.kaggle\n",
     "    !mv kaggle.json ~/.kaggle/\n",
     "    !chmod 600 ~/.kaggle/kaggle.json\n",
-    "except:\n",
+    "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    if Path.cwd().stem == 'notebooks':\n",
     "        os.chdir(Path.cwd().parent)\n",
@@ -57,7 +57,7 @@
     "The next cell downloads a competition dataset.\n",
     "\n",
     "If you're running from PyCharm then you may prefer to download it manually in a\n",
-    "terminal/shell/Anaconda prompt because there is no visual feedback here."
+    "terminal/shell/Anaconda prompt because there is no visual feedback in PyCharm (should change in 2019.2)."
    ]
   },
   {
@@ -615,9 +615,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (IntracranialNeurophysDL)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-d1267685"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -629,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   },
   "pycharm": {
    "stem_cell": {
