Better linking images.

--- a/notebooks/01_02_data_import.ipynb
+++ b/notebooks/01_02_data_import.ipynb
@@ -355,7 +355,7 @@
     "### Tensor Decomposition\n",
     "Let's use a tensor-decomposition tool to get a simpler view of the tensor contents.\n",
     "[Source](https://pyramidal.stanford.edu/publications/Williams2018_Neuron.pdf)\n",
-    "![simple linear network](img/tca.png) \n",
+    "![simple linear network](https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/img/tca.png?raw=1) \n",
     "\n",
     "In the below plot, each row is a different tensor component and each column is a different axis/dimension.\n",
     "The output changes each time it is run.\n",
