--- a/notebooks/02_02_first_neural_net.ipynb
+++ b/notebooks/02_02_first_neural_net.ipynb
@@ -148,7 +148,7 @@
     "We will use a simple linear fully-connected model with a single layer.\n",
     "I honestly couldn't think of a simpler neural network.\n",
     "\n",
-    "![simple linear network](img/simple_linear_nn.png)\n",
+    "![simple linear network](https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/img/simple_linear_nn.png?raw=1)\n",
     "created with [NN-SVG](http://alexlenail.me/NN-SVG/index.html)\n",
     "\n",
     "We use Tensorflow to create and train the model.\n",
