--- a/notebooks/02_02_first_neural_net.ipynb
+++ b/notebooks/02_02_first_neural_net.ipynb
@@ -64,6 +64,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Get Data\n",
+    "Download faces_basic if we don't already have it.\n",
+    "If you get 401 - Unauthorized, then Chad needs to add your kaggle account,\n",
+    "or you need to create a new API token from kaggle"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -74,10 +89,6 @@
    },
    "outputs": [],
    "source": [
-    "# Download faces_basic if we don't already have it.\n",
-    "# If you get 401 - Unauthorized, then Chad needs to add your kaggle account,\n",
-    "# or you need to create a new API token from kaggle\n",
-    "\n",
     "datadir = Path.cwd() / 'data' / 'kjm_ecog'\n",
     "if not (datadir / 'converted').is_dir():\n",
     "    !kaggle datasets download -d cboulay/kjm-ecog-faces-basic\n",
@@ -86,7 +97,7 @@
     "    import zipfile\n",
     "    with zipfile.ZipFile(data_path, 'r') as zip_ref:\n",
     "        zip_ref.extractall(datadir / 'converted' / 'faces_basic')\n",
-    "    data_path.unlink()\n"
+    "    data_path.unlink()"
    ]
   },
   {
@@ -570,6 +581,47 @@
     "plt.legend(['train', 'validation'], loc='upper right')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Inspecting the model\n",
+    "TODO: visualize the weights like with did for LDA"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "### Choose a different participant\n",
+    "The participant data that we've been using so far is easily classified,\n",
+    "which is nice to confirm things work, but is not very useful when trying\n",
+    "to understand how to improve.\n",
+    "\n",
+    "Go back to the cell above where the participant data are imported\n",
+    "and replace 'de' with 'rn'\n",
+    "### Try a different activation function\n",
+    "Chaining linear activations doesn't get you much, because\n",
+    "chaining linear matrix transformations yields a single matrix.\n",
+    "We need something non-linear happening before we can benefit from\n",
+    "adding more layers.\n",
+    "### Try adding more layers\n",
+    "\n",
+    "  "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
