Cleaned up environment normalization. Hopefully fixed metadata in 01_02

--- a/notebooks/01_00_tensorflow_test.ipynb
+++ b/notebooks/01_00_tensorflow_test.ipynb
@@ -36,16 +36,25 @@
     "    # See if we are running on google.colab\n",
     "    import google.colab\n",
     "    from google.colab import files\n",
-    "    # Configure kaggle\n",
-    "    files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
-    "    !pip install -q kaggle\n",
-    "    !mkdir -p ~/.kaggle\n",
-    "    !mv kaggle.json ~/.kaggle/\n",
-    "    !chmod 600 ~/.kaggle/kaggle.json\n",
+    "    os.chdir('..')\n",
+    "    if not (Path.cwd() / '.kaggle').is_dir():\n",
+    "        # Configure kaggle\n",
+    "        files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
+    "        !pip install -q kaggle\n",
+    "        !mkdir -p ~/.kaggle\n",
+    "        !mv kaggle.json ~/.kaggle/\n",
+    "        !chmod 600 ~/.kaggle/kaggle.json\n",
+    "    if not (Path.cwd() / 'repo').is_dir():\n",
+    "        # Download the workshop repo and change to its directory\n",
+    "        # For now edit the username/password. This requirement will be removed when the repo is made public.\n",
+    "        !git clone https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
+    "        os.chdir('IntracranialNeurophysDL')\n",
+    "    IN_COLAB = True\n",
     "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    if Path.cwd().stem == 'notebooks':\n",
     "        os.chdir(Path.cwd().parent)\n",
+    "    # Make sure the kaggle executable is on the PATH\n",
     "    os.environ['PATH'] = os.environ['PATH'] + ';' + str(Path(sys.executable).parent / 'Scripts')\n",
     "    IN_COLAB = False"
    ]
@@ -77,7 +86,8 @@
     "    fpath = Path(fn + '.zip')\n",
     "    with zipfile.ZipFile(fpath, 'r') as zip_ref:\n",
     "        zip_ref.extractall(Path.cwd() / 'data' / 'dogscats')\n",
-    "    fpath.unlink()"
+    "    fpath.unlink()\n",
+    "    print(\"Finished extracting data.\")"
    ]
   },
   {
