Still working on LSTM.

--- a/notebooks/05_02_LSTM_and_GRU.ipynb
+++ b/notebooks/05_02_LSTM_and_GRU.ipynb
@@ -136,6 +136,7 @@
     "from data.utils.fileio import load_joeyo_reaching\n",
     "sess_names = ['indy_2016' + _ for _ in ['0921_01', '0927_04', '0927_06', '0930_02', '0930_05' '1005_06' '1006_02']]\n",
     "sess_name = sess_names[0]\n",
+    "# TODO: No z-score on load. We'll z-score with training mean/sd only.\n",
     "X, Y, X_ax_info, Y_ax_info = load_joeyo_reaching(datadir, sess_name, x_chunk='spikerates')\n",
     "assert X_ax_info['fs'] == Y_ax_info['fs']\n",
     "# TODO: If we want to use LFP data (1 kHz) we need to downsample it or upsample behaviour (250 Hz)"
@@ -178,6 +179,7 @@
     "Y = Y[:, :-n_drop].astype(np.float32).reshape((Y.shape[0], -1, seq_length)).transpose((1, 2, 0))\n",
     "n_trials = X.shape[0]  # Not really 'trials', more like 'sequences'\n",
     "\n",
+    "# DON'T DO THIS! It randomizes training so they don't carry over.\n",
     "X_train, X_valid, Y_train, Y_valid = train_test_split(X, Y, train_size=P_TRAIN)\n",
     "\n",
     "ds_train = tf.data.Dataset.from_tensor_slices((X_train, Y_train))\n",
@@ -203,6 +205,19 @@
     "GRUs are similar in concept but use only two gates: an update gate and a reset gate. [See here](https://arxiv.org/pdf/1412.3555v1.pdf).\n",
     "\n",
     "As such, LSTMs are slightly more sophisticated and theoretically could model more of your model space, but in practice GRUs usually do just as well and are more efficient computationally. We will quickly try each version.\n",
+    "\n",
+    "### Other studies\n",
+    "\n",
+    "* [Ahmadi et al]() - Using one of these datasets.\n",
+    "    * \n",
+    "* [Glaser et al., arxiv 2018](https://arxiv.org/abs/1708.00909) [with code!](https://github.com/KordingLab/Neural_Decoding)\n",
+    "    * \n",
+    "* [Park and Kim, IEEE APSIPA ASC 2018](https://ieeexplore.ieee.org/abstract/document/8659760)\n",
+    "* [Tseng et al... Nicolelis, IEEE Neural Computation 2019](https://www.mitpressjournals.org/doi/abs/10.1162/neco_a_01189)\n",
+    "    * \"1000 iterations of training with a batch size of 64 and unrolling of 30 steps (equivalent to 1.5 s as each time step was 50 ms)\".    \n",
+    "    * Tested 1-layer and 2-layer networks, 2-layer widening was best, with dropout=0.2\n",
+    "* [Wang et al., EMBC 2018](https://ieeexplore.ieee.org/abstract/document/8512609) - Decoding hindlimb kinematics.\n",
+    "    * seq_length=3; N_RNN_UNITS=200; lr=0.001; neural_dropout=0.2; batch_size=32; epochs=100\n",
     "\n",
     "### Implementation Details\n",
     "This will probably change, but the unification of LSTM APIs in TensorFlow 2.0 means that there are some constraints on how an LSTM can be parameterized and still run on the GPU.\n",
@@ -255,7 +270,12 @@
     "outputs = tf.keras.layers.Conv1D(2, 1, activation='relu')(_y)\n",
     "model = tf.keras.Model(inputs, outputs)\n",
     "model.compile(optimizer='NAdam', loss='mean_squared_error')\n",
-    "model.summary()"
+    "model.summary()\n",
+    "\n",
+    "\n",
+    "# model.add(LSTM(self.units,input_shape=(X_train.shape[1],X_train.shape[2]),dropout_W=self.dropout,dropout_U=self.dropout)) #Within recurrent layer, include dropout\n",
+    "#     if self.dropout!=0: model.add(Dropout(self.dropout)) #Dropout some units (recurrent layer output units)\n",
+    "        "
    ]
   },
   {
@@ -442,10 +462,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
