Put run in colab table in some more notebooks.

--- a/notebooks/05_01_intro_to_RNNs.ipynb
+++ b/notebooks/05_01_intro_to_RNNs.ipynb
@@ -12,7 +12,16 @@
     "# Intro to RNNs\n",
     "This notebook is part of the [SachsLab Workshop for Intracranial Neurophysiology and Deep Learning](https://github.com/SachsLab/IntracranialNeurophysDL).\n",
     "\n",
-    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson."
+    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson.\n",
+    "\n",
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/05_01_intro_to_RNNs.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/05_01_intro_to_RNNs.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "  </td>\n",
+    "</table>"
    ]
   },
   {
@@ -1130,10 +1139,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
