Added "spike sorting" plot for disentangled representations

--- a/notebooks/04_01_Auto_Encoder.ipynb
+++ b/notebooks/04_01_Auto_Encoder.ipynb
@@ -1019,9 +1019,9 @@
         "    model.capacity += CAPACITY_MAX / (CAPACITY_ANN / CAPACITY_STEP)\n",
         "  \n",
         "  train_model(ADD_NOISE, out_losses=True);\n",
-        "  test = model.encode(examples)[0].numpy().squeeze()\n",
-        "  line[0].set_xdata(test[:,0])\n",
-        "  line[0].set_ydata(test[:,1])\n",
+        "  capacity_trained = model.encode(examples)[0].numpy().squeeze()\n",
+        "  line[0].set_xdata(capacity_trained[:,0])\n",
+        "  line[0].set_ydata(capacity_trained[:,1])\n",
         "  ax.set_title(str(x))\n",
         "  display.clear_output()\n",
         "  display.display(plt.gcf())\n",
@@ -1044,6 +1044,43 @@
         "model_out, pca_out, pca = pca_comp()\n",
         "min_max_model, min_max_pca = wave_generation(model_out, pca_out, pca)\n",
         "plot_features(min_max_model, min_max_pca)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OO6qYFk2HiJ-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Adding a new plot to see if this improves spike clustering.\n",
+        "# With a basic threshold across horizontal and vertical dimensions, \n",
+        "# we can clearly see good waveform separations. At this point adding\n",
+        "# a clustering metric is trivial. \n",
+        "\n",
+        "fig = plt.figure(figsize=(20,10))\n",
+        "threshold = .75\n",
+        "for id, pair in enumerate(capacity_trained):\n",
+        "  if pair[1] > threshold:\n",
+        "    colormap = cm.Reds(1.)\n",
+        "  elif pair[1] < -threshold:\n",
+        "    colormap = cm.Blues(1.)\n",
+        "  elif pair[0] < -threshold:\n",
+        "    colormap = cm.spring(1.)\n",
+        "  elif pair[0] > threshold:\n",
+        "    colormap = cm.Oranges(1.)\n",
+        "  else:\n",
+        "    colormap = cm.Purples(1.)\n",
+        "  \n",
+        "  plt.subplot(121, xlim=(-5,5), ylim=(-5,5))\n",
+        "  plt.plot(pair[0], pair[1], '.', color=colormap)\n",
+        "  \n",
+        "  plt.subplot(122)\n",
+        "  plt.plot(examples[id,:], color=colormap)\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
