Updated colormap for cluster plotting

--- a/notebooks/04_01_Auto_Encoder.ipynb
+++ b/notebooks/04_01_Auto_Encoder.ipynb
@@ -105,6 +105,7 @@
         "import datetime\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from matplotlib import cm\n",
         "from indl import enable_plotly_in_cell\n",
         "%load_ext tensorboard.notebook"
       ],
@@ -701,8 +702,6 @@
         "  min_pca = np.min(pca_out[:,0])\n",
         "  max_pca = np.max(pca_out[:,0])\n",
         "\n",
-        "  from matplotlib import cm\n",
-        "\n",
         "  # Plot results\n",
         "  lims = np.max(\n",
         "            (np.abs(np.min(pca_out)), np.abs(np.max(pca_out)),\n",
@@ -921,6 +920,12 @@
         "model = betaCVAE(learning_rate=LEARNING_RATE, beta=BETA)\n",
         "optimizer = tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE)\n",
         "\n",
+        "# Dataset creation\n",
+        "TRAIN_BUF = train_set.shape[0]\n",
+        "VALID_BUF = valid_set.shape[0]\n",
+        "train_dataset = tf.data.Dataset.from_tensor_slices(train_set).shuffle(TRAIN_BUF).batch(BATCH_SIZE)\n",
+        "valid_dataset = tf.data.Dataset.from_tensor_slices(valid_set).shuffle(VALID_BUF).batch(BATCH_SIZE)\n",
+        "\n",
         "# Trackers\n",
         "train_loss = []\n",
         "valid_loss = []\n",
@@ -985,9 +990,10 @@
         "import time\n",
         "# Model Creation\n",
         "# Model parameters\n",
+        "ADD_NOISE = False \n",
         "BETA = 20.  # actually gamma parameter in the paper\n",
         "CAPACITY_MAX = 2\n",
-        "CAPACITY_ANN = 25\n",
+        "CAPACITY_ANN = 50\n",
         "CAPACITY_STEP = 1\n",
         "\n",
         "BATCH_SIZE = 1024  \n",
@@ -995,6 +1001,12 @@
         "EPOCHS = 1\n",
         "model = betaCVAE(learning_rate=LEARNING_RATE, beta=BETA, capacity=0., latent_dim=2)\n",
         "optimizer = tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE)\n",
+        "\n",
+        "# Dataset creation\n",
+        "TRAIN_BUF = train_set.shape[0]\n",
+        "VALID_BUF = valid_set.shape[0]\n",
+        "train_dataset = tf.data.Dataset.from_tensor_slices(train_set).shuffle(TRAIN_BUF).batch(BATCH_SIZE)\n",
+        "valid_dataset = tf.data.Dataset.from_tensor_slices(valid_set).shuffle(VALID_BUF).batch(BATCH_SIZE)\n",
         "\n",
         "# Trackers\n",
         "train_loss = []\n",
@@ -1011,7 +1023,7 @@
         "ax.set_ylim((-5,5))\n",
         "line = ax.plot(0,0,'.')\n",
         "\n",
-        "n_to_plot = 1000\n",
+        "n_to_plot = 500\n",
         "examples = get_examples(n_to_plot, ADD_NOISE)\n",
         "\n",
         "for x in range(CAPACITY_ANN+1):\n",
@@ -1062,24 +1074,14 @@
         "# a clustering metric is trivial. \n",
         "\n",
         "fig = plt.figure(figsize=(20,10))\n",
-        "threshold = .75\n",
-        "for id, pair in enumerate(capacity_trained):\n",
-        "  if pair[1] > threshold:\n",
-        "    colormap = cm.Reds(1.)\n",
-        "  elif pair[1] < -threshold:\n",
-        "    colormap = cm.Blues(1.)\n",
-        "  elif pair[0] < -threshold:\n",
-        "    colormap = cm.spring(1.)\n",
-        "  elif pair[0] > threshold:\n",
-        "    colormap = cm.Oranges(1.)\n",
-        "  else:\n",
-        "    colormap = cm.Purples(1.)\n",
+        "threshold = 1.\n",
+        "ax1 = plt.subplot(121, xlim=(-4,4), ylim=(-4,4))\n",
+        "ax2 = plt.subplot(122)\n",
+        "for id, pair in enumerate(capacity_trained[:,:]):\n",
+        "  colormap = .5 * np.add(cm.bwr((pair[0]+4)/8), cm.PiYG((pair[1]+4)/8))\n",
         "  \n",
-        "  plt.subplot(121, xlim=(-5,5), ylim=(-5,5))\n",
-        "  plt.plot(pair[0], pair[1], '.', color=colormap)\n",
-        "  \n",
-        "  plt.subplot(122)\n",
-        "  plt.plot(examples[id,:], color=colormap)\n",
+        "  ax1.plot(pair[0], pair[1], '.', color=colormap)\n",
+        "  ax2.plot(examples[id,:], color=colormap);\n",
         "  "
       ],
       "execution_count": 0,
