TF vers update, normalize headings

--- a/notebooks/01_02_data_import.ipynb
+++ b/notebooks/01_02_data_import.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction to Setting Up the Environment and Importing Data\n",
+    "This notebook is part of the [SachsLab Workshop for Intracranial Neurophysiology and Deep Learning](https://github.com/SachsLab/IntracranialNeurophysDL).\n",
+    "\n",
+    "### Normalizing Environments\n",
+    "Let's try to unify the Google Colab environment and the local environment.\n",
+    "\n",
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/01_02_data_import.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/01_02_data_import.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "  </td>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -14,24 +34,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Block to standardize Local and Google Colab\n",
-    "Let's try to unify the Google Colab environment and the local environment.\n",
-    "\n",
     "If you are running on Google Colab, then in the next cell you'll be presented\n",
     "with a widget. Use it to browse to the kaggle.json file.\n",
     "(Note: You might have to show hidden files/folders in the file browser) \n",
     "It will also clone the workshop repository and change into its directory.\n",
     "\n",
     "If you are running locally then this will simply change to the workshop root directory."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -61,16 +81,11 @@
     "    # Make sure the kaggle executable is on the PATH\n",
     "    os.environ['PATH'] = os.environ['PATH'] + ';' + str(Path(sys.executable).parent / 'Scripts')\n",
     "    IN_COLAB = False"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Get Data\n",
     "\n",
@@ -93,14 +108,16 @@
     "\n",
     "This dataset may still be private, in which case you will have to ask Chad to grant you\n",
     "access."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "datadir = Path.cwd() / 'data' / 'kjm_ecog'\n",
@@ -113,58 +130,52 @@
     "        zip_ref.extractall(datadir / 'converted' / 'faces_basic')\n",
     "    data_path.unlink()\n",
     "    print(\"Finished extracting data.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Import File\n",
     "We can now start working with the data.\n",
     "We will import a single file that contains processed band-power data.\n",
     "\n",
     "If you are curious about how the data were processed, the script can be found [here](https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/data/kjm_ecog/03_convert.py)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "SUB_ID = 'de'\n",
     "from data.utils.fileio import from_neuropype_h5\n",
     "test_file = datadir / 'converted' / 'faces_basic' / (SUB_ID + '_bp.h5')\n",
     "chunks = from_neuropype_h5(test_file)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Data Exploration\n",
     "### Print Contents\n",
     "Let's quickly inspect the data to see what we have."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -183,16 +194,11 @@
     "\n",
     "instance_axis = chunk['axes'][ax_types.index('instance')]\n",
     "print(\"The trial label frequencies are \\n{}\".format(pd.value_counts(instance_axis['data']['Marker'])))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Simple Plotting\n",
     "The data contain 603 trials, with each trial having\n",
@@ -207,14 +213,16 @@
     "This is a 3-D tensor.\n",
     "\n",
     "We will plot a few different slices of the tensor."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -243,16 +251,11 @@
     "plt.ylabel('Broadband Power (z)')\n",
     "plt.xlabel('Time After Stim (s)')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Tensor Decomposition\n",
     "Let's use a tensor-decomposition tool to get a simpler view of the tensor contents.\n",
@@ -263,30 +266,27 @@
     "The output changes each time it is run.\n",
     "Look for a component where the 1st column clearly shows two different groups of trials.\n",
     "Then in the 2nd column we can see the time-course of that component, and in the 3rd column we see the channels that contributed to that component."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "!pip install git+https://github.com/ahwillia/tensortools\n",
     "import tensortools as tt\n",
     "U = tt.cp_als(chunk['data'], rank=3, verbose=True)\n",
     "fig, ax, po = tt.plot_factors(U.factors, plots=['scatter', 'line', 'bar'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Tensor Decomposition in Neuropype\n",
     "\n",
@@ -294,30 +294,31 @@
     "and only those who have the latest version (should be out soon!).\n",
     "\n",
     "As it uses plotly, it won't show up in PyCharm (should be fixed in v2019.2) but it will in a browser."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Add my local copy of Neuropype to the PATH.\n",
     "import sys\n",
     "sys.path.append(str(Path.cwd().parent / 'Intheon' / 'cpe'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import neuropype.nodes as nn\n",
@@ -327,43 +328,37 @@
     "type_map = {'time': 'lines', 'space': 'bars', 'instance': 'markers'}\n",
     "plt = nn.TensorDecompositionPlot(output_mode='notebook', iv_field='Marker',\n",
     "                                 type_map=type_map)(data=tt_res['model'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
