--- a/notebooks/01_00_tensorflow_test.ipynb
+++ b/notebooks/01_00_tensorflow_test.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
     "This notebook is meant to test that you have all the components you need to run\n",
     "through the workshop notebooks. It is based on a Kaggle dataset and a Kaggle Kernel\n",
     "found [here](https://www.kaggle.com/uysimty/keras-cnn-dog-or-cat-classification).\n",
@@ -50,6 +52,8 @@
     "        !git clone https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
     "        os.chdir('IntracranialNeurophysDL')\n",
     "    IN_COLAB = True\n",
+    "    # Setup tensorflow 2.0\n",
+    "    !pip install -q tensorflow-gpu==2.0.0-beta0\n",
     "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    if Path.cwd().stem == 'notebooks':\n",
@@ -639,15 +643,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
