--- a/notebooks/03_03_CNN_transfer_learning.ipynb
+++ b/notebooks/03_03_CNN_transfer_learning.ipynb
@@ -9,32 +9,48 @@
     }
    },
    "source": [
-    "# Transfer Learning\n",
+    "# Introduction to Transfer Learning\n",
     "This notebook is part of the [SachsLab Workshop for Intracranial Neurophysiology and Deep Learning](https://github.com/SachsLab/IntracranialNeurophysDL).\n",
-    "https://www.tensorflow.org/alpha/tutorials/images/transfer_learning\n",
+    "\n",
+    "### Lesson Reference\n",
+    "To supplement the presented material, consult the tutorial here: https://www.tensorflow.org/alpha/tutorials/images/transfer_learning\n",
     "* Freeze layers, update only first layer, then unfreeze and update\n",
     "\n",
-    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson."
+    "### Normalize Environments\n",
+    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson.\n",
+    "\n",
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/03_03_CNN_transfer_learning.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/03_03_CNN_transfer_learning.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "  </td>\n",
+    "</table>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -58,7 +74,7 @@
     "        os.chdir('IntracranialNeurophysDL')\n",
     "    IN_COLAB = True\n",
     "    # Setup tensorflow 2.0\n",
-    "    !pip install -q tensorflow-gpu==2.0.0-alpha0\n",
+    "    !pip install -q tensorflow-gpu==2.0.0-beta0\n",
     "except ModuleNotFoundError:\n",
     "    IN_COLAB = False\n",
     "    import sys\n",
@@ -82,17 +98,16 @@
     "import matplotlib.pyplot as plt\n",
     "from indl import enable_plotly_in_cell\n",
     "%load_ext tensorboard.notebook\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Reset the model weights to what they were before training\n",
@@ -112,34 +127,32 @@
     "xfer_model = replace_input_layers(model, X.shape[-1])\n",
     "xfer_model.compile(loss='sparse_categorical_crossentropy', optimizer='Nadam', metrics=['accuracy'])\n",
     "xfer_model.summary()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "history = xfer_model.fit(x=ds_train,  \n",
     "                         epochs=N_EPOCHS, \n",
     "                         validation_data=ds_valid,\n",
     "                         verbose=1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Iterate through each participant\n",
@@ -186,42 +199,38 @@
     "\n",
     "# Save the model\n",
     "xfer_model.save(datadir / 'converted' / 'faces_basic' / 'xfer_model_full.h5')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Transfer the model to unseen data"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Save what we just trained\n",
     "if IN_COLAB:\n",
     "    files.download(datadir / 'converted' / 'faces_basic' / 'xfer_model_full.h5')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "X, Y, ax_info = load_faces_houses(datadir, 'mv', feature_set='full')\n",
@@ -230,17 +239,16 @@
     "# Make a new model with the proper input size\n",
     "xfer_model = replace_input_layers(xfer_model, X.shape[-1])\n",
     "xfer_model.compile(loss='sparse_categorical_crossentropy', optimizer='Nadam', metrics=['accuracy'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "log_dir = Path.cwd() / \"logs\" / datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
@@ -251,43 +259,37 @@
     "                         callbacks=[tensorboard_cb],\n",
     "                         verbose=1)\n",
     "%tensorboard --logdir={str(log_dir)}\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
