link to colab and source 01_00

--- a/notebooks/01_00_tensorflow_test.ipynb
+++ b/notebooks/01_00_tensorflow_test.ipynb
@@ -19,7 +19,16 @@
     "Run the next cell to initialize the Kaggle API.\n",
     "If you are running on google colab, then you'll be presented\n",
     "with a widget. Use it to browse to the kaggle.json file.\n",
-    "(Note: You might have to show hidden files/folders in the file browser)"
+    "(Note: You might have to show hidden files/folders in the file browser)\n",
+    "\n",
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/01_00_tensorflow_test.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/01_00_tensorflow_test.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "  </td>\n",
+    "</table>"
    ]
   },
   {
